# grosse_conf_24_vector_db

./: .gitattributes  LICENSE  Makefile  README.md  pyproject.toml
data/: dict_ids_embeddings_full.pickle
gc_db/: config.py
gc_db/embedding/: embedder.py
gc_db/streamlit/: home.py  init_db_st.py  st_creators.py  st_utils.py
gc_db/utils/: flex_logging.py  image_segmentation.py  utils.py
gc_db/vector_db/: vector_db.py  vector_db_in_memory.py  vector_db_nmslib.py
