[tool.poetry]
name = "gc_db"
version = "0.1.0"
description = ""
authors = ["philippe.stepniewski <philippe.stepniewski@gmail.com>"]
packages = [{include = "gc_db"}]

[tool.poetry.dependencies]
python = "^3.11"
fashion-clip = "^0.2.2"
streamlit = "1.28"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

