[tool.poetry]
name = "gc_db"
version = "0.1.0"
description = ""
authors = ["philippe.stepniewski <philippe.stepniewski@gmail.com>"]
packages = [{ include = "gc_db" }]

[tool.poetry.dependencies]
python = "^3.10"
fashion-clip = "^0.2.2"
streamlit = "1.30.0"
scikit-learn = "^1.3.2"
watchdog = "^3.0.0"
deep-translator = "^1.11.4"
jupyter = "^1.0.0"
transformers = "^4.38.0"
hnswlib = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

